--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "Fibonacci-REST",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./server/index.js",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon ./server/index.js"
   },
   "keywords": [],
   "author": "",
